k8s/blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: blog
  template:
    metadata:
      labels:
        component: blog
    spec:
      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: blog-persistent-volume-claim
      containers:
        - name: blog
          image: ghost:latest
          ports:
            - containerPort: 2368
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-content
