k8s/uidd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uidd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: uuid
  template:
    metadata:
      labels:
        component: uuid
    spec:
      volumes:
        - name: uidd-storage
          persistentVolumeClaim:
            claimName: uidd-persistent-volume-claim
      containers:
        - name: uuid
          image: uidesigndaily/web:tagVersion
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uidd-storage
              mountPath: /usr/uidesigndaily/uploads
              subPath: uploads
      imagePullSecrets:
        - name: regcred
