k8s/blog-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: blog
  ports:
    - port: 4000
      targetPort: 2368
