k8s/uidd-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: uidd-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: uuid
  ports:
    - port: 3000
      targetPort: 3000
