k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - uidesigndaily.com
        - www.uidesigndaily.com
        - blog.uidesigndaily.com
        - analytics.uidesigndaily.com
        - elastic.uidesigndaily.com
        - log.uidesigndaily.com
      secretName: k8s-uidd-cert
  rules:
    - host: uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: uidd-cluster-ip-service
              servicePort: 3000
    - host: www.uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: uidd-cluster-ip-service
              servicePort: 3000
    - host: blog.uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: blog-cluster-ip-service
              servicePort: 4000
    - host: analytics.uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: uidd-cluster-ip-service
              servicePort: 3000
    - host: elastic.uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: uidd-cluster-ip-service
              servicePort: 3000
    - host: log.uidesigndaily.com
      http:
        paths:
          - path: /
            backend:
              serviceName: uidd-cluster-ip-service
              servicePort: 3000
